[gd_scene load_steps=9 format=4 uid="uid://crmdepyqcrl1w"]

[ext_resource type="Script" uid="uid://cddogt7q6fcfj" path="res://场景/世界场景/world_scenes.gd" id="1_mrg2d"]
[ext_resource type="PackedScene" uid="uid://cr1nh36270tbi" path="res://场景/其他/相机/场景相机.tscn" id="1_rr45e"]
[ext_resource type="PackedScene" uid="uid://dgjelx7d704m7" path="res://场景/UI/世界场景UI/world_ui.tscn" id="2_iu58j"]
[ext_resource type="Script" uid="uid://ctmpp7ags2vpe" path="res://场景/世界场景/data_layer.gd" id="3_oaoe5"]
[ext_resource type="PackedScene" uid="uid://jo1m33cs4xno" path="res://场景/世界场景/队伍/Baseteam.tscn" id="4_0yndv"]
[ext_resource type="TileSet" uid="uid://dh5h2daf6y3wn" path="res://资源/World_data_tileset.tres" id="4_iu58j"]
[ext_resource type="Script" uid="uid://decv8lp4cvdsm" path="res://场景/世界场景/grid_indeicator.gd" id="6_0n6bm"]
[ext_resource type="Texture2D" uid="uid://dffl8e2dxnhua" path="res://素材/高亮16.png" id="7_t12g3"]

[node name="WorldScenes" type="Node2D"]
script = ExtResource("1_mrg2d")
metadata/_edit_lock_ = true

[node name="WorldUI" parent="." instance=ExtResource("2_iu58j")]

[node name="场景相机" parent="." instance=ExtResource("1_rr45e")]

[node name="DataLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAwABAAAAAAD/////AwAAAAAAAAAAAP//AwABAAAAAAAAAAAAAwABAAAAAAD+//7/AwABAAAAAAD+////AwABAAAAAAD+/wAAAwABAAAAAAD///7/AwABAAAAAAAAAP7/AwABAAAAAAABAP7/AwABAAAAAAABAP//AwABAAAAAAABAAAAAwABAAAAAAD+/wEAAwABAAAAAAD//wEAAwABAAAAAAAAAAEAAwABAAAAAAABAAEAAwABAAAAAAD9//7/AwABAAAAAAD9////AwABAAAAAAD9/wAAAwABAAAAAAD9/wEAAwABAAAAAAD9//3/AwABAAAAAAD+//3/AwABAAAAAAD///3/AwABAAAAAAAAAP3/AwABAAAAAAABAP3/AwABAAAAAAA=")
tile_set = ExtResource("4_iu58j")
script = ExtResource("3_oaoe5")
metadata/_edit_lock_ = true

[node name="DecLayer" type="TileMapLayer" parent="."]
metadata/_edit_lock_ = true

[node name="HighlightLayer" type="TileMapLayer" parent="."]
metadata/_edit_lock_ = true

[node name="Baseteam" parent="." instance=ExtResource("4_0yndv")]
position = Vector2(6, 8)

[node name="GridIndeicator" type="Node2D" parent="."]
script = ExtResource("6_0n6bm")

[node name="Sprite2D" type="Sprite2D" parent="GridIndeicator"]
scale = Vector2(4, 4)
texture = ExtResource("7_t12g3")

[node name="EventContainer" type="Node" parent="."]
